Fixed issue w/ header stretching avatar on safari

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -112,6 +112,7 @@ a, a:link, a:visited {
   }
   .prof-pic {
     height: 100%;
+    max-height: 40px;
     width: auto;
   }
   .sign-out {
@@ -136,7 +137,7 @@ a, a:link, a:visited {
     font-size: 18px;
   }
   .prof-pic {
-    height: 100%;
+    max-height: 40px;
     width: auto;
   }
   .sign-out {
